反色，边缘，梯度，模糊的实时检测

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">CameraTutorial</string>
+    <string name="invert">反色</string>
+    <string name="edge">边缘</string>
+    <string name="sobel">梯度</string>
+    <string name="boxblur">模糊</string>
 </resources>
