解决摄像角度问题，已经可以完美显示，增加人脸检测，而且效果很好

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="edge">边缘</string>
     <string name="sobel">梯度</string>
     <string name="boxblur">模糊</string>
+    <string name="faceDetection">人脸检测</string>
 </resources>
